# check-updates

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  release.sh  test_detector.sh
ccu/: Cargo.toml  README.md
ccu/src/: cli.rs  cratesio.rs  detector.rs  global.rs  lib.rs  main.rs  output.rs  updater.rs
ccu/src/parsers/: cargo_lock.rs  cargo_toml.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs  output.rs  resolver.rs  types.rs  version.rs
examples/: environment.yml  test_conda_parser.rs
ncu/: Cargo.toml  README.md
ncu/src/: cli.rs  detector.rs  global.rs  lib.rs  main.rs  npm.rs  output.rs  updater.rs
ncu/src/parsers/: lockfiles.rs  mod.rs  package_json.rs
pcu/: Cargo.toml  README.md
pcu/src/: cli.rs  detector.rs  global.rs  lib.rs  main.rs  output.rs  pypi.rs  python.rs  updater.rs  uv_python.rs
pcu/src/parsers/: conda.rs  lockfiles.rs  mod.rs  pyproject.rs  requirements.rs
pcu/tests/: integration.rs
pcu/tests/fixtures/: requirements.txt
src/: cli.rs  detector.rs  global.rs  lib.rs  main.rs  output.rs  pypi.rs  python.rs  resolver.rs  updater.rs  uv_python.rs  version.rs
src/parsers/: conda.rs  lockfiles.rs  mod.rs  pyproject.rs  requirements.rs
tests/: README.md  integration.rs
tests/common/: mod.rs
tests/fixtures/: environment.yml  pyproject-pdm.toml  pyproject-pep621.toml  pyproject-poetry.toml  requirements-dev.txt
