[workspace]
members = ["core", "pcu", "ccu", "ncu"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/folknor/check-updates"

[workspace.dependencies]
# Core dependencies (shared)
check-updates-core = { path = "core" }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal UI
indicatif = "0.18"

# TOML parsing
toml = "0.9"

# Dev dependencies
tempfile = "3"
