[workspace]
members = ["core", "pcu", "ccu", "ncu"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/folknor/check-updates"

[workspace.dependencies]
# Core dependencies (shared)
check-updates-core = { path = "core" }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1.0.102"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# CLI
clap = { version = "4.5.60", features = ["derive"] }

# Terminal UI
indicatif = "0.18.4"

# TOML parsing
toml = "1.0.3"

# Dev dependencies
tempfile = "3.25.0"
