[workspace]
members = ["core", "pcu", "ccu", "ncu"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/folknor/check-updates"

[workspace.dependencies]
# Core dependencies (shared)
check-updates-core = { path = "core", version = "0.3.0" }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1.0.102"

# Async runtime
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "sync"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }

# CLI
clap = { version = "4.5.60", features = ["derive"] }

# Terminal UI
indicatif = "0.18.4"

# TOML parsing
toml = "1.1.2"

# Dev dependencies
tempfile = "3.25.0"

[workspace.lints.clippy]
# Style: modern idiomatic Rust
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"

# Safety: strict error handling
unwrap_in_result = "deny"
ok_expect = "deny"
unwrap_used = "deny"

# Async safety
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"

# Type safety
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
