[package]
name = "node-check-updates"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Check for outdated npm dependencies"
readme = "README.md"
repository.workspace = true
keywords = ["npm", "pnpm", "yarn", "bun", "dependencies"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[lib]
name = "ncu"
path = "src/lib.rs"

[[bin]]
name = "ncu"
path = "src/main.rs"

[dependencies]
check-updates-core.workspace = true
clap.workspace = true
colored.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
anyhow.workspace = true
indicatif.workspace = true
glob = "0.3"
futures = "0.3.32"

[dev-dependencies]
tempfile.workspace = true
